[UI-buttons]z-index fix for full-screen Signed-off-by: Aniket Behera <aniket@sokratik.com>

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -216,6 +216,7 @@ body.presentation {
         max-width: 100%;
         width: 100%;
         height: 100%;
+        z-index:-1;
         //For story telling
         //height: initial;
         //animation: animatedFullImage 63s ease-in 3s 1 normal forwards;
